# mecademic_ros2

./: ,gitignore  .gitignore  cam_detector.py  camera_feed.py  emotion _detection.keras  joy_to_twist.py  meca_setup.sh  model_update.py  requirements.txt  start_turtle_sim.sh  start_turtle_sim_xbox.sh  start_xbox_controller.sh  tt.clj
launch/: btree_launch.py  camera_launch.py  camera_tf_launch.py  face_detection_launch.py  piranha_launch.py  robot_state_launch.py
src/btree/: package.xml  setup.cfg  setup.py
src/btree/btree/: asleep.py  check_condition.py  dance.py  face_condition.py  face_detection_node.py  idle.py  playsong.py  track_face.py  transform_helper.py
src/btree/btree/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/btree/btree/log/: latest_build
src/camera/: package.xml  setup.py
src/camera/camera/: SingleFacialRecognitionTracking.py  cam_detector.py  face_detector.py
src/camera/launch/: camera_tf.launch.py
src/custom_interfaces/: CMakeLists.txt
src/custom_interfaces/msg/: SingleJointState.msg
src/custom_interfaces/srv/: ExecuteMotion.srv
src/m_behavior_tree/: CMakeLists.txt  README.md  package.xml
src/m_behavior_tree/config/: my_behavior_tree.xml
src/m_behavior_tree/include/m_behavior_tree/: bt_nodes.h  execution_time_tracker.h  service_helpers.h
src/m_behavior_tree/src/: bt_executor.cpp  bt_nodes.cpp
src/meca_controller/: setup.py
src/meca_controller/meca_controller/: robot_controller.py  robot_motion.py  test_command.py  test_driver.py
src/mecademic_description/: package.xml  setup.cfg  setup.py
src/mecademic_description/launch/: robot_state.launch.py
src/mecademic_description/urdf/: meca500r3.urdf  meca500r3.urdf.xml
src/webcam/install/: local_setup.sh  setup.sh
src/webcam/log/: latest_build
